--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        .head {
+        .head .box{
             height: 100px;
             color:aliceblue;
             font-size: 30px;
@@ -18,5 +18,6 @@
 </head>
 <body>
     <div class="head">彩虹栏目</div>
+    <div class="box"></div>
 </body>
 </html>
